--- a/public/view/History.html
+++ b/public/view/History.html
@@ -1,207 +1,63 @@
-<!DOCTYPE html 
-     PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-<title>History</title>
-
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<style type="text/css" media="screen">
-		@import url( ../Static/style.css );
-	</style>
-	<link rel='alternate' type='application/rss+xml' title='RSS' href='http://tom.counsell.org/rss/History' />
-	<script src='http://tom.counsell.org/Static/newpage.js' type='text/javascript'></script>
-		
+  <meta charset="utf-8">
+  <meta name="generator" content="pandoc">
+  <title>History</title>
+  <style type="text/css">code{white-space: pre;}</style>
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+  <link rel="stylesheet" href="../index.css">
 </head>
-
-<body onkeypress='hotkey(event,"http://tom.counsell.org/edit/");'>
-<div id="wrapper">
-	<div id="masthead">
-		<div id="blogtitle" >
-			History
-		</div>
-	</div>
-	
-	<div id="insideWrapper">
-	
-		<div id="sidebar">
-			<div id="sidebox">
-				<div class="title"><a href="../index.html" title="Tom Counsell's Soks Wiki">Tom Counsell's Soks Wiki</a></div>
-			</div>
-			<br />
-	
-			<div id="sidebox1">
-				<div class="title">Key Pages</div>
-				
-				<a href='../index.html' class='automatic'>Home Page</a> <br/>
-<a href='SiteIndex.html' class='automatic'>Site Index</a> <br/>
-<a href='RecentChangesToThisSite.html' class=''>Recent Changes</a> <br/>
-			</div>
-			<br />
-
-			<div id="sidebox4">
-				<form style="padding: 0px; margin-top: 0px; margin-bottom: 0px;" id="searchform" method="get" action="http://tom.counsell.org/find/History">
-					<div class="title">Search:</div>
-					<p style="padding: 0px; margin-top: 0px; margin-bottom: 0px;">
-						<input type="text" class="input" name="regex" id="search" size="15" />
-						<input name="submit" type="submit" tabindex="5" value="GO" />
-					</p>
-				</form>
-			</div>
-			<br />
-			
-			<div id='adbox'>
-				<div class='title'>Adverts</div>
-				<script type="text/javascript"><!--
-				google_ad_client = "pub-1825629230893907";
-				google_ad_width = 120;
-				google_ad_height = 90;
-				google_ad_format = "120x90_0ads_al";
-				google_ad_channel = "";
-				google_color_border = "000000";
-				google_color_bg = "000000";
-				google_color_link = "FFFFFF";
-				google_color_text = "CCCCCC";
-				google_color_url = "999999";
-				//-->
-				</script>
-				<script type="text/javascript"
-				  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-				  </script>
-<p>
-</p>
-			</div>
-<br/>			
-			<div id="sidebox2">
-				<div class="title">Backlinks</div>
-				
-					
-					
-					
-							
-								<a href='OtherPages.html'>Other Pages</a><br/>
-							
-					
-				
-			</div>
-			<br />
-	
-			<div id="sidebox3">
-				<div class="title">Other Pages</div>
-				<a href='History.html' class='automatic'>History</a> <br/>
-<a href='Phd.html' class='automatic'>PhD</a> <br/>
-<a href='StuffIDoAroundTheDepartment.html' class=''>Department work</a> <br/>
-<a href='CollegeWork.html' class='automatic'>College work</a> <br/>
-<a href='Programming.html' class='automatic'>Programming</a> <br/>
-			</div>
-			<br />
-			
-
-	
-			<div id="sidebox5">
-				<div class="title">Links</div>
-				<a href='http://tom.counsell.org/edit/TypeATitleHere'>Add a new page</a><br/>
-				<a href='http://tom.counsell.org/edit/PictureOfTypeATitleHere'>Upload a new picture</a><br/>
-				<a href='http://tom.counsell.org/edit/AttachedTypeATitleHere'>Upload a new file</a><br/>
-			</div>
-			<br />
-	
-			<div id="sidebox6">
-				<div class="title"><a href='http://www.soks.org'>Soks</a> Powered</div>
-				<a href='http://www.soks.org'>Soks</a> is a wiki written in ruby
-			</div>  
-			<br />
-	</div>
-	
-	<div id="contentwrapper">
-		<div id="content">
-			<br />
-			<div class="post">
-			<h1>History</h1>
-
-
-	<ol>
-	<li>Born in the late 1970&#8217;s in Somerset, England</li>
-		<li>During my childhood was dragged across Europe and the middle east by my parent&#8217;s late hippyness (initially in a bright yellow cross between a removal van and a landrover).</li>
-		<li>Won a scholarship to <a href='http://www.millfield.somerset.sch.uk/' class=''>Millfield School</a>
-	<ul>
-	<li>Grade A in lots of GCSEs (the exception was a B in English Language)</li>
-		<li>Grade A in French, Physics, Maths, Further Maths A-Levels and in a Further Additional Maths AS.</li>
-		<li>Captained the dinghy sailing team</li>
-	</ul>
-	</li>
-		<li>Gained sponsorship from the civilian side of the <a href='http://www.mod.uk/careers/' class=''>UK Ministry of Defence</a>. Spent a nine months at their training centre before University and then worked each summer at:
-	<ul>
-	<li><a href='http://www.aero.gknplc.com' class=''>GKN Westland Aerospace</a> in Yeovil</li>
-		<li>The Guided Weapons and Surveillance Support Group in Malvern</li>
-		<li>A (now dead?) start-up called Netcentric Solutions outside Cambridge</li>
-		<li>The Battle Group Battle Management System procurement team in Bristol.</li>
-	</ul>
-	</li>
-		<li>Spent four years reading <a href='http://www.eng.cam.ac.uk' class=''>Engineering</a> at <a href='http://www.clare.cam.ac.uk' class=''>Clare College</a>, <a href='http://www.cam.ac.uk' class=''>Cambridge University</a>.
-	<ul>
-	<li>Rowed, politiked, grooved and worked for a couple of start-ups</li>
-		<li>BA (hons) first class etc followed by a MEng and later the joke/honorary MA.</li>
-	</ul>
-	</li>
-		<li>Worked for <a href='http://www.marakon.com' class=''>Marakon Associates</a> for three years
-	<ul>
-	<li>Strategy Consulting.  Based out of London.  On projects in Europe, the USA and the Far East in Banking, Pharmaceuticals and Chocolate doing Corporate and Business Unit strategy, organisation design, pay, new business start-up and old-business shut-down.</li>
-		<li>Got a big promotion and left to&#8230;.</li>
-	</ul>
-	</li>
-		<li>Return to Cambridge to study for a <a href='Phd.html' class='automatic'>PhD</a> under <a href='http://www.ifm.eng.cam.ac.uk/people/jma42/' class=''>Dr Julian Allwood</a> and live with my soon-to-be-wife Catherine</li>
-		<li>Got married</li>
-		<li>Worked as a teaching assistant in the department while I &#8230;</li>
-		<li>... finished my <a href='Phd.html' class='automatic'>PhD</a>, moved to Brighton and started work with the &#8230;</li>
-		<li><a href='http://www.carbontrust.com' class=''>Carbon Trust</a> in the strategy team.
-	<ul>
-	<li>Subject expert on emissions trading schemes, working closely with <a href='http://www.econ.cam.ac.uk/rstaff/grubb/' class=''>Professor Michael Grubb</a>.</li>
-		<li>Worked on internal projects defining what the organisation could and should do</li>
-		<li>Helped to produce a whole series of <a href='Publications.html' class='automatic'>publications</a></li>
-	</ul>
-	</li>
-		<li>Seconded to <a href='http://www.decc.gov.uk' class=''>the Department for Energy and Climate Change</a> ...
-	<ul>
-	<li>where I assist the department&#8217;s chief scientist&#8212;<a href='http://www.inference.phy.cam.ac.uk/mackay/' class=''>Professor David MacKay</a> ...</li>
-		<li>... in particular, with developing the <a href='http://www.decc.gov.uk/en/content/cms/what_we_do/lc_uk/2050/2050.aspx' class=''>DECC 2050 Pathways</a></li>
-	</ul>
-	</li>
-		<li>... and then subsequently employed by <a href='http://www.decc.gov.uk' class=''>the Department for Energy and Climate Change</a> in the same role.</li>
-	</ol>
-
-<div class='command'>
-	<a href='http://tom.counsell.org/edit/History' accesskey="E" >Edit this page</a> or
-	watch for changes using <a href='http://tom.counsell.org/rss/History'>RSS</a>.
-</div>
-			<br />
-		</div>
-		<br />
-	</div>
-</div>
-
-
-
-<div id="footer">
-
- <br />From an original theme on <a class="footerLink" href='http://wordpress.org' title='Proudly powered by WordPress, state-of-the-art semantic personal publishing platform'>WordPress 1.5</a>. <br />
-
-This theme started out as <a class="footerLink" href="http://www.thoughtmechanics.com/blog/templates">Benevolence</a><br /> and ended up as  <a class="footerLink" href="http://theloo.org/2005/03/06/borderline-chaos/">Borderline Chaos (1.9)</a>.  <br />It validates in <a class="footerLink" href="http://validator.w3.org/check/referer">XHTML</a> and <a class="footerLink" href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> minus plugins.
-<br />
-
-<a class="footerLink" href="http://www.managedtasks.com/wpthemes/blog">WordPress 1.5 Themes</a> is &copy; the Author. 
-
-
-<br /><br />
-
-</div>
-
-
-
-</div>
-
-
-</div>
+<body>
+<header>
+<h1 class="title">History</h1>
+</header>
+<p><a href="/">Back to the home page</a></p>
+<ol type="1">
+<li>Born in the late 1970’s in Somerset, England</li>
+<li>During my childhood was dragged across Europe and the middle east by my parent’s late hippyness (initially in a bright yellow cross between a removal van and a landrover).</li>
+<li>Won a scholarship to <a href="http://www.millfield.somerset.sch.uk/">Millfield School</a>
+<ul>
+<li>Grade A in lots of GCSEs (the exception was a B in English Language)</li>
+<li>Grade A in French, Physics, Maths, Further Maths A-Levels and in a Further Additional Maths AS.</li>
+<li>Captained the dinghy sailing team</li>
+</ul></li>
+<li>Gained sponsorship from the civilian side of the <a href="http://www.mod.uk/careers/">UK Ministry of Defence</a>. Spent a nine months at their training centre before University and then worked each summer at:
+<ul>
+<li><a href="http://www.aero.gknplc.com">GKN Westland Aerospace</a> in Yeovil</li>
+<li>The Guided Weapons and Surveillance Support Group in Malvern</li>
+<li>A (now dead?) start-up called Netcentric Solutions outside Cambridge</li>
+<li>The Battle Group Battle Management System procurement team in Bristol.</li>
+</ul></li>
+<li>Spent four years reading <a href="http://www.eng.cam.ac.uk">Engineering</a> at <a href="http://www.clare.cam.ac.uk">Clare College</a>, <a href="http://www.cam.ac.uk">Cambridge University</a>.
+<ul>
+<li>Rowed, politiked, grooved and worked for a couple of start-ups</li>
+<li>BA (hons) first class etc followed by a MEng and later the joke/honorary MA.</li>
+</ul></li>
+<li>Worked for <a href="http://www.marakon.com">Marakon Associates</a> for three years
+<ul>
+<li>Strategy Consulting. Based out of London. On projects in Europe, the USA and the Far East in Banking, Pharmaceuticals and Chocolate doing Corporate and Business Unit strategy, organisation design, pay, new business start-up and old-business shut-down.</li>
+<li>Got a big promotion and left to….</li>
+</ul></li>
+<li>Return to Cambridge to study for a <a href="Phd.html">PhD</a> under <a href="http://www.ifm.eng.cam.ac.uk/people/jma42/">Dr Julian Allwood</a> and live with my soon-to-be-wife Catherine</li>
+<li>Got married</li>
+<li>Worked as a teaching assistant in the department while I …</li>
+<li>... finished my <a href="Phd.html">PhD</a>, moved to Brighton and started work with the …</li>
+<li><a href="http://www.carbontrust.com">Carbon Trust</a> in the strategy team.
+<ul>
+<li>Subject expert on emissions trading schemes, working closely with <a href="http://www.econ.cam.ac.uk/rstaff/grubb/">Professor Michael Grubb</a>.</li>
+<li>Worked on internal projects defining what the organisation could and should do</li>
+<li>Helped to produce a whole series of <a href="Publications.html">publications</a></li>
+</ul></li>
+<li>Seconded to <a href="http://www.decc.gov.uk">the Department for Energy and Climate Change</a> ...
+<ul>
+<li>where I assist the department’s chief scientist—<a href="http://www.inference.phy.cam.ac.uk/mackay/">Professor David MacKay</a> ...</li>
+<li>... in particular, with developing the <a href="http://www.decc.gov.uk/en/content/cms/what_we_do/lc_uk/2050/2050.aspx">DECC 2050 Pathways</a></li>
+</ul></li>
+<li>Created DECC's new engineering team</li>
+<li>Took over DECC's Futures team, part of the Strategy Directorate</li>
+</ol>
 </body>
-
 </html>
