--- a/public/view/History.html
+++ b/public/view/History.html
@@ -8,7 +8,7 @@
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <link rel="stylesheet" href="../index.css">
+  <link rel="stylesheet" href="/index.css">
 </head>
 <body>
 <header>
