Updated the PhD page

--- a/public/view/Phd.html
+++ b/public/view/Phd.html
@@ -1,152 +1,36 @@
-<!DOCTYPE html 
-     PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-<title>PhD</title>
-
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<style type="text/css" media="screen">
-		@import url( ../Static/style.css );
-	</style>
-	<link rel='alternate' type='application/rss+xml' title='RSS' href='http://tom.counsell.org/rss/Phd' />
-	<script src='http://tom.counsell.org/Static/newpage.js' type='text/javascript'></script>
-		
+  <meta charset="utf-8">
+  <title>PhD</title>
+  <style type="text/css">code{white-space: pre;}</style>
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+  <link rel="stylesheet" href="index.css">
 </head>
+<body>
+<h1>My PhD thesis&mdash;Remove toner: Reuse paper</h1>
 
-<body onkeypress='hotkey(event,"http://tom.counsell.org/edit/");'>
-<div id="wrapper">
-	<div id="masthead">
-		<div id="blogtitle" >
-			PhD
-		</div>
-	</div>
-	
-	<div id="insideWrapper">
-	
-		<div id="sidebar">
-			<div id="sidebox">
-				<div class="title"><a href="../index.html" title="Tom Counsell's Soks Wiki">Tom Counsell's Soks Wiki</a></div>
-			</div>
-			<br />
-	
-			<div id="sidebox1">
-				<div class="title">Key Pages</div>
-				
-				<a href='../index.html' class='automatic'>Home Page</a> <br/>
-<a href='SiteIndex.html' class='automatic'>Site Index</a> <br/>
-<a href='RecentChangesToThisSite.html' class=''>Recent Changes</a> <br/>
-			</div>
-			<br />
+<p>Back to the <a href='/'>home page</a></p>
 
-			<div id="sidebox4">
-				<form style="padding: 0px; margin-top: 0px; margin-bottom: 0px;" id="searchform" method="get" action="http://tom.counsell.org/find/Phd">
-					<div class="title">Search:</div>
-					<p style="padding: 0px; margin-top: 0px; margin-bottom: 0px;">
-						<input type="text" class="input" name="regex" id="search" size="15" />
-						<input name="submit" type="submit" tabindex="5" value="GO" />
-					</p>
-				</form>
-			</div>
-			<br />
-			
-			<div id='adbox'>
-				<div class='title'>Adverts</div>
-				<script type="text/javascript"><!--
-				google_ad_client = "pub-1825629230893907";
-				google_ad_width = 120;
-				google_ad_height = 90;
-				google_ad_format = "120x90_0ads_al";
-				google_ad_channel = "";
-				google_color_border = "000000";
-				google_color_bg = "000000";
-				google_color_link = "FFFFFF";
-				google_color_text = "CCCCCC";
-				google_color_url = "999999";
-				//-->
-				</script>
-				<script type="text/javascript"
-				  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-				  </script>
-<p>
-</p>
-			</div>
-<br/>			
-			<div id="sidebox2">
-				<div class="title">Backlinks</div>
-				
-					
-					
-					
-							
-								<a href='StuffIDoAroundTheDepartment.html'>Stuff I do around the department</a><br/>
-							
-								<a href='History.html'>History</a><br/>
-							
-								<a href='Publications.html'>publications</a><br/>
-							
-								<a href='OtherPages.html'>Other Pages</a><br/>
-							
-								<a href='Programming.html'>Programming</a><br/>
-							
-					
-				
-			</div>
-			<br />
-	
-			<div id="sidebox3">
-				<div class="title">Other Pages</div>
-				<a href='History.html' class='automatic'>History</a> <br/>
-<a href='Phd.html' class='automatic'>PhD</a> <br/>
-<a href='StuffIDoAroundTheDepartment.html' class=''>Department work</a> <br/>
-<a href='CollegeWork.html' class='automatic'>College work</a> <br/>
-<a href='Programming.html' class='automatic'>Programming</a> <br/>
-			</div>
-			<br />
-			
+<p>I&#8217;ve finished my PhD. It was supervised by <a href='http://www.ifm.eng.cam.ac.uk/people/jma42' class=''>Julian Allwood</a>:</p>
 
-	
-			<div id="sidebox5">
-				<div class="title">Links</div>
-				<a href='http://tom.counsell.org/edit/TypeATitleHere'>Add a new page</a><br/>
-				<a href='http://tom.counsell.org/edit/PictureOfTypeATitleHere'>Upload a new picture</a><br/>
-				<a href='http://tom.counsell.org/edit/AttachedTypeATitleHere'>Upload a new file</a><br/>
-			</div>
-			<br />
-	
-			<div id="sidebox6">
-				<div class="title"><a href='http://www.soks.org'>Soks</a> Powered</div>
-				<a href='http://www.soks.org'>Soks</a> is a wiki written in ruby
-			</div>  
-			<br />
-	</div>
-	
-	<div id="contentwrapper">
-		<div id="content">
-			<br />
-			<div class="post">
-			<p>I&#8217;ve finished my PhD. It was supervised by <a href='http://www.ifm.eng.cam.ac.uk/people/jma42' class=''>Julian Allwood</a> and my thesis was titled:</p>
-
-
-	<h1>Remove toner: Reuse paper</h1>
-
-
-	<p><em>Thomas A. M. Counsell</em></p>
 
 
 	<h2>Abstract</h2>
 
 
-	<p>This thesis reports on experiments into whether abrasives, lasers or solvents can remove ordinary black toner-print from ordinary white oﬃce paper in a way that leaves 
+	<p>This thesis reports on experiments into whether abrasives, lasers or solvents can remove ordinary black toner-print from ordinary white office paper in a way that leaves 
 the paper reusable. If it could be ‘un-printed’ then waste 
-oﬃce-paper could be reused immediately, without the need 
+office-paper could be reused immediately, without the need 
 for recycling.</p>
 
 
 	<p>Paper and board consumption causes approximately 
 1% of man-made climate change gas emissions. Estimates 
 in the ﬁrst chapter suggest that un-printing could reduce 
-emissions per tonne of oﬃce paper by up to 95% – greater 
+emissions per tonne of office paper by up to 95% – greater 
 than the potential from incineration, localisation, annual 
 ﬁbre, ﬁbre recycling, un-printing or electronic paper.</p>
 
@@ -185,43 +69,30 @@ All three approaches would need to be tested on a wider
 range of prints and papers.</p>
 
 
-You can download a pdf:
-	<ol>
-	<li><a href='http://www.counsell.org/tamc-removetonerreusepaper-small.pdf' class=''>Low resolution (5MB)</a></li>
-		<li><a href='http://www.counsell.org/tamc-removetonerreusepaper-large.pdf' class=''>High resolution (80MB)</a></li>
-	</ol>
+You can <a href='tamc-thesis-v2.pdf' class=''>
+download a pdf
+</a> of this thesis.
 
+The work was continued by <a href='http://www.lcmp.eng.cam.ac.uk/welcome/people/david-leal'>David R Leal-Ayala</a>. In particular, ge got the laser based approach to <a href='http://www.newscientist.com/blogs/onepercent/2012/03/laser-powered-unprinter-wipes.html'>work better</a>.
 
-	<h1>Carbon Trust <a href='Publications.html' class='automatic'>Publications</a></h1>
-
-
-I&#8217;ve been involved in four Carbon Trust <a href='Publications.html' class='automatic'>publications</a>:
-	<ol>
-	<li><a href='http://www.carbontrust.co.uk/publications/publicationdetail.htm?productid=CTC748' class=''>Global Carbon Mechanisms: Emerging lessons and implications</a></li>
-		<li><a href='http://www.carbontrust.co.uk/publications/publicationdetail?productid=CTC740' class=''>Climate change – a business revolution?</a></li>
-		<li><a href='http://www.carbontrust.co.uk/publications/publicationdetail?productid=CTC734' class=''>Cutting Carbon in Europe: The 2020 plans and the future of the EU ETS</a></li>
-		<li><a href='http://www.carbontrust.co.uk/publications/publicationdetail.htm?productid=CTC728' class=''>EU ETS impacts on profitability and trade: a sector by sector analysis</a></li>
-	</ol>
-
-
-	<h1>PhD  <a href='Publications.html' class='automatic'>Publications</a></h1>
+	<h2>PhD Publications</h2>
 
 
 	<p>Some of the material in my PhD thesis has been published in Journals and presented at conferences. In all cases my supervisor, <a href='http://www.ifm.eng.cam.ac.uk/people/jma42' class=''>Julian Allwood</a>, was co-author:</p>
 
 
-	<h2>Journal papers</h2>
+	<h3>Journal papers</h3>
 
 
 	<ol>
 	<li>Reducing climate change gas emissions by cutting out stages in 
-the life-cycle of oﬃce paper. Journal of Resources, Conservation and Recycling, 49(4):340–352, 2007. 
+the life-cycle of office paper. Journal of Resources, Conservation and Recycling, 49(4):340–352, 2007. 
 <a href='http://dx.doi.org/10.1016/j.resconrec.2006.03.018' class=''>http://dx.doi.org/10.1016/j.resconrec.2006.03.018</a> </li>
-		<li>Desktop paper recycling: A survey of novel technologies that might recycle oﬃce paper within the oﬃce. Journal of Materials Processing Technology, 173(1):111–123, 2006. 
+		<li>Desktop paper recycling: A survey of novel technologies that might recycle office paper within the office. Journal of Materials Processing Technology, 173(1):111–123, 2006. 
 <a href='http://dx.doi.org/10.1016/j.jmatprotec.2005.11.017' class=''>http://dx.doi.org/10.1016/j.jmatprotec.2005.11.017</a> </li>
 		<li>Meeting the 2050 carbon target for paper by print removal. CIRP Annals &#8211; Manufacturing Technology, 57(1):25-28, 2008.
 <a href='http://dx.doi.org/10.1016/j.cirp.2008.03.003' class=''>http://dx.doi.org/10.1016/j.cirp.2008.03.003</a></li>
-		<li>Using abrasives to remove toner-print so that oﬃce paper might be reused. Wear. 266(7-8):782-794, 2009.
+		<li>Using abrasives to remove toner-print so that office paper might be reused. Wear. 266(7-8):782-794, 2009.
 <a href='http://dx.doi.org/10.1016/j.wear.2008.10.003' class=''>http://dx.doi.org/10.1016/j.wear.2008.10.003</a></li>
 		<li>Using solvents to remove a toner print so that office paper might be reused.    Proceedings    of    the    Royal    Society    A:    Mathematical, Physical    and    Engineering    Science    465(2112),    3839    (2009). <a href='http://dx.doi.org/10.1098/rspa.2009.0144' class=''>http://dx.doi.org/10.1098/rspa.2009.0144</a></li>
 	</ol>
@@ -231,45 +102,23 @@ the life-cycle of oﬃce paper. Journal of Resources, Conservation and Recycling
 
 
 	<ol>
-	<li>Rethinking oﬃce paper recycling. In 4th International conference 
+	<li>Rethinking office paper recycling. In 4th International conference 
 on design and manufacture for sustainable development, Newcastle, 12-13 July 2005. </li>
-		<li>The feasibility and environmental consequences of scale change in oﬃce paper production. In ISIE 2005, Stockholm, 12-15 June. </li>
+		<li>The feasibility and environmental consequences of scale change in office paper production. In ISIE 2005, Stockholm, 12-15 June. </li>
 		<li>Un-printing toner: Early results. In 13th CIRP Intl. Conference on Life Cycle Engineering, Leuven, 31 May–2 Jun 2006. 
 <a href='http://www.mech.kuleuven.be/lce2006/122.pdf' class=''>http://www.mech.kuleuven.be/lce2006/122.pdf</a>.</li>
 	</ol>
 
-<div class='command'>
-	<a href='http://tom.counsell.org/edit/Phd' accesskey="E" >Edit this page</a> or
-	watch for changes using <a href='http://tom.counsell.org/rss/Phd'>RSS</a>.
-</div>
-			<br />
-		</div>
-		<br />
-	</div>
-</div>
+  <h3>Other reports</h3>
 
+  <ol>
+    <li>A report on <a href='http://phys.org/news175847766.html'>Phys.org</a>.</li>
+    <li>A mention in the November 2009 UK edition of Wired Magazine</li>
+    <li>Mentions in Julian Allwood's book <a href='http://www.withbotheyesopen.com'>Sustainable Materials: with both eyes open</a>.</li>
 
+  </ol>
+    
 
-<div id="footer">
-
- <br />From an original theme on <a class="footerLink" href='http://wordpress.org' title='Proudly powered by WordPress, state-of-the-art semantic personal publishing platform'>WordPress 1.5</a>. <br />
-
-This theme started out as <a class="footerLink" href="http://www.thoughtmechanics.com/blog/templates">Benevolence</a><br /> and ended up as  <a class="footerLink" href="http://theloo.org/2005/03/06/borderline-chaos/">Borderline Chaos (1.9)</a>.  <br />It validates in <a class="footerLink" href="http://validator.w3.org/check/referer">XHTML</a> and <a class="footerLink" href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> minus plugins.
-<br />
-
-<a class="footerLink" href="http://www.managedtasks.com/wpthemes/blog">WordPress 1.5 Themes</a> is &copy; the Author. 
-
-
-<br /><br />
-
-</div>
-
-
-
-</div>
-
-
-</div>
 </body>
 
 </html>
