--- a/public/view/Phd.html
+++ b/public/view/Phd.html
@@ -40,13 +40,11 @@ some relevant patents have been ﬁled. The second chapter
 reviews these patents according to whether they remove, 
 obscure or de-colour the original print. It is not clear from 
 the patents whether toner-print can be removed by abra- 
-sives, lasers, or solvents without rendering the paper un- 
-usable. These three approaches are tested experimentally 
+sives, lasers, or solvents without rendering the paper unusable. These three approaches are tested experimentally 
 and the results reported in chapters 3, 4 &#38; 5.</p>
 
 
-	<p>Abrasives can remove toner-print with limited dam- 
-age to the underlying paper by operating in an adhesive 
+	<p>Abrasives can remove toner-print with limited damage to the underlying paper by operating in an adhesive 
 wear regime. This involves making ten passes with a ﬁne 
 P800 abrasive rubbing at high speeds (6 m/s) and low loads 
 (0.3 N). Longer wavelength lasers are able to remove the 
@@ -54,17 +52,14 @@ toner-print and leave blank paper undamaged by operating
 at 1 W and 10 kHz in the 1064 nm wavelength and scanning 
 across the surface eight times at 400 mm/s. Unfortunately 
 the paper beneath the print is yellowed during removal. 
-A 40:60 mixture chloroform and dimethylsulfoxide eﬀec- 
-tively dissolves toner without dissolving paper if agitated 
+A 40:60 mixture chloroform and dimethylsulfoxide eﬀectively dissolves toner without dissolving paper if agitated 
 with ultrasound for four minutes.</p>
 
 
 	<p>Chapter 6 outlines the research required to make the 
-approaches feasible replacements for conventional paper re- 
-cycling. The abrasive approach requires research into ex- 
+approaches feasible replacements for conventional paper recycling. The abrasive approach requires research into ex- 
 tending abrasive life. The laser approach requires research 
-into avoiding paper yellowing. The solvent approach re- 
-quires research into benign solvents and solvent recycling. 
+into avoiding paper yellowing. The solvent approach requires research into benign solvents and solvent recycling. 
 All three approaches would need to be tested on a wider 
 range of prints and papers.</p>
 
