--- a/public/view/History.html
+++ b/public/view/History.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="generator" content="pandoc">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   <title>History</title>
   <style type="text/css">code{white-space: pre;}</style>
   <!--[if lt IE 9]>
@@ -56,8 +57,13 @@
 <li>where I assist the department’s chief scientist—<a href="http://www.inference.phy.cam.ac.uk/mackay/">Professor David MacKay</a> ...</li>
 <li>... in particular, with developing the <a href="http://www.decc.gov.uk/en/content/cms/what_we_do/lc_uk/2050/2050.aspx">DECC 2050 Pathways</a></li>
 </ul></li>
-<li>Created DECC's new engineering team</li>
-<li>Took over DECC's Futures team, part of the Strategy Directorate</li>
+<li>Became a permanent civil servant in the department and:
+<ul>
+<li>Created the new engineering team</li>
+<li>then took over DECC's Futures team, part of the Strategy Directorate</li>
+<li>then took my whole team to the International Climate Change directorate, to help other countries replicate what we did</li>
+<li>whilst in the International Directorate, I also looked after the forests, private finance and international climate finance team when their manager moved on.</li>
+</ul></li>
 </ol>
 </body>
 </html>
