updated bio to reflect move to analysis

--- a/public/view/History.html
+++ b/public/view/History.html
@@ -63,6 +63,7 @@
 <li>then took over DECC's Futures team, part of the Strategy Directorate</li>
 <li>then took my whole team to the International Climate Change directorate, to help other countries replicate what we did</li>
 <li>whilst in the International Directorate, I also looked after the forests, private finance and international climate finance team when their manager moved on.</li>
+<li>then moved to the newly expanded Analysis Directorate, working for the Chief Economist</li>
 </ul></li>
 </ol>
 </body>
