--- a/public/cv.css
+++ b/public/cv.css
@@ -1,5 +1,5 @@
 body {
-  font-size: 0.7em;
+  font-size: 1.0em;
   font-family: "Franklin Gothic Book"
 }
 
@@ -10,7 +10,6 @@ body {
 }
 
 td {
-  font-size: 0.7em;
 }
 
 h1, #contact {
@@ -19,7 +18,7 @@ h1, #contact {
 }
 
 #contact {
-  margin-bottom: 5em;
+  margin-bottom: 2em;
 }
 
 h1, h2 {
@@ -28,6 +27,10 @@ h1, h2 {
   font-weight: normal;
   margin-bottom: 0;
   text-transform: uppercase;
+}
+
+h3 {
+  margin-bottom: 0.1em;
 }
 
 p, ol, ul {
