Fixed a typo in history

--- a/public/view/History.html
+++ b/public/view/History.html
@@ -25,7 +25,7 @@
 <li>Grade A in French, Physics, Maths, Further Maths A-Levels and in a Further Additional Maths AS.</li>
 <li>Captained the dinghy sailing team</li>
 </ul></li>
-<li>Gained sponsorship from the civilian side of the <a href="http://www.mod.uk/careers/">UK Ministry of Defence</a>. Spent nine months at their training centre before University and then worked each summer at:
+<li>Gained sponsorship from the civilian side of the <a href="http://www.mod.uk/careers/">UK Ministry of Defence</a>. Spent nine months at their training centre before university and then worked each summer at:
 <ul>
 <li><a href="http://www.aero.gknplc.com">GKN Westland Aerospace</a> in Yeovil</li>
 <li>The Guided Weapons and Surveillance Support Group in Malvern</li>
