Update for move to GiveDirectly

--- a/public/view/History.html
+++ b/public/view/History.html
@@ -1,71 +1,133 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
 <head>
-  <meta charset="utf-8">
-  <meta name="generator" content="pandoc">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+  <meta charset="utf-8" />
+  <meta name="generator" content="pandoc" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <title>History</title>
-  <style type="text/css">code{white-space: pre;}</style>
+  <style>
+    code{white-space: pre-wrap;}
+    span.smallcaps{font-variant: small-caps;}
+    span.underline{text-decoration: underline;}
+    div.column{display: inline-block; vertical-align: top; width: 50%;}
+    div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
+    ul.task-list{list-style: none;}
+    .display.math{display: block; text-align: center; margin: 0.5rem auto;}
+  </style>
+  <link rel="stylesheet" href="/index.css" />
   <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
   <![endif]-->
-  <link rel="stylesheet" href="/index.css">
 </head>
 <body>
-<header>
+<header id="title-block-header">
 <h1 class="title">History</h1>
 </header>
 <p><a href="/">Back to the home page</a></p>
 <ol type="1">
 <li>Born in the late 1970’s in Somerset, England</li>
-<li>During my childhood was dragged across Europe and the middle east by my parent’s late hippyness (initially in a bright yellow cross between a removal van and a landrover).</li>
-<li>Won a scholarship to <a href="http://www.millfield.somerset.sch.uk/">Millfield School</a>
+<li>During my childhood was dragged across Europe and the middle east by
+my parent’s late hippyness (initially in a bright yellow cross between a
+removal van and a landrover).</li>
+<li>Won a scholarship to <a
+href="http://www.millfield.somerset.sch.uk/">Millfield School</a>
 <ul>
-<li>Grade A in lots of GCSEs (the exception was a B in English Language)</li>
-<li>Grade A in French, Physics, Maths, Further Maths A-Levels and in a Further Additional Maths AS.</li>
+<li>Grade A in lots of GCSEs (the exception was a B in English
+Language)</li>
+<li>Grade A in French, Physics, Maths, Further Maths A-Levels and in a
+Further Additional Maths AS.</li>
 <li>Captained the dinghy sailing team</li>
 </ul></li>
-<li>Gained sponsorship from the civilian side of the <a href="http://www.mod.uk/careers/">UK Ministry of Defence</a>. Spent nine months at their training centre before university and then worked each summer at:
+<li>Gained sponsorship from the civilian side of the <a
+href="http://www.mod.uk/careers/">UK Ministry of Defence</a>. Spent nine
+months at their training centre before university and then worked each
+summer at:
 <ul>
-<li><a href="http://www.aero.gknplc.com">GKN Westland Aerospace</a> in Yeovil</li>
+<li><a href="http://www.aero.gknplc.com">GKN Westland Aerospace</a> in
+Yeovil</li>
 <li>The Guided Weapons and Surveillance Support Group in Malvern</li>
-<li>A (now dead?) start-up called Netcentric Solutions outside Cambridge</li>
-<li>The Battle Group Battle Management System procurement team in Bristol.</li>
+<li>A (now dead?) start-up called Netcentric Solutions outside
+Cambridge</li>
+<li>The Battle Group Battle Management System procurement team in
+Bristol.</li>
 </ul></li>
-<li>Spent four years reading <a href="http://www.eng.cam.ac.uk">Engineering</a> at <a href="http://www.clare.cam.ac.uk">Clare College</a>, <a href="http://www.cam.ac.uk">Cambridge University</a>.
+<li>Spent four years reading <a
+href="http://www.eng.cam.ac.uk">Engineering</a> at <a
+href="http://www.clare.cam.ac.uk">Clare College</a>, <a
+href="http://www.cam.ac.uk">Cambridge University</a>.
 <ul>
 <li>Rowed, politiked, grooved and worked for a couple of start-ups</li>
-<li>BA (hons) first class etc followed by a MEng and later the joke/honorary MA.</li>
+<li>BA (hons) first class etc followed by a MEng and later the
+joke/honorary MA.</li>
 </ul></li>
-<li>Worked for <a href="http://www.marakon.com">Marakon Associates</a> for three years
+<li>Worked for <a href="http://www.marakon.com">Marakon Associates</a>
+for three years
 <ul>
-<li>Strategy Consulting. Based out of London. On projects in Europe, the USA and the Far East in Banking, Pharmaceuticals and Chocolate doing Corporate and Business Unit strategy, organisation design, pay, new business start-up and old-business shut-down.</li>
+<li>Strategy Consulting. Based out of London. On projects in Europe, the
+USA and the Far East in Banking, Pharmaceuticals and Chocolate doing
+Corporate and Business Unit strategy, organisation design, pay, new
+business start-up and old-business shut-down.</li>
 <li>Got a big promotion and left to….</li>
 </ul></li>
-<li>Return to Cambridge to study for a <a href="Phd.html">PhD</a> under <a href="http://www.ifm.eng.cam.ac.uk/people/jma42/">Dr Julian Allwood</a> and live with my soon-to-be-wife Catherine</li>
+<li>Return to Cambridge to study for a <a href="Phd.html">PhD</a> under
+<a href="http://www.ifm.eng.cam.ac.uk/people/jma42/">Dr Julian
+Allwood</a> and live with my soon-to-be-wife Catherine</li>
 <li>Got married</li>
 <li>Worked as a teaching assistant in the department while I …</li>
-<li>... finished my <a href="Phd.html">PhD</a>, moved to Brighton and started work with the …</li>
-<li><a href="http://www.carbontrust.com">Carbon Trust</a> in the strategy team.
+<li>… finished my <a href="Phd.html">PhD</a>, moved to Brighton and
+started work with the …</li>
+<li><a href="http://www.carbontrust.com">Carbon Trust</a> in the
+strategy team.
 <ul>
-<li>Subject expert on emissions trading schemes, working closely with <a href="http://www.econ.cam.ac.uk/rstaff/grubb/">Professor Michael Grubb</a>.</li>
-<li>Worked on internal projects defining what the organisation could and should do</li>
-<li>Helped to produce a whole series of <a href="Publications.html">publications</a></li>
+<li>Subject expert on emissions trading schemes, working closely with <a
+href="http://www.econ.cam.ac.uk/rstaff/grubb/">Professor Michael
+Grubb</a>.</li>
+<li>Worked on internal projects defining what the organisation could and
+should do</li>
+<li>Helped to produce a whole series of <a
+href="Publications.html">publications</a></li>
 </ul></li>
-<li>Seconded to <a href="http://www.decc.gov.uk">the Department for Energy and Climate Change</a> ...
+<li>Seconded to <a href="http://www.decc.gov.uk">the Department for
+Energy and Climate Change</a> …
 <ul>
-<li>where I assist the department’s chief scientist—<a href="http://www.inference.phy.cam.ac.uk/mackay/">Professor David MacKay</a> ...</li>
-<li>... in particular, with developing the <a href="http://www.decc.gov.uk/en/content/cms/what_we_do/lc_uk/2050/2050.aspx">DECC 2050 Pathways</a></li>
+<li>where I assist the department’s chief scientist—<a
+href="http://www.inference.phy.cam.ac.uk/mackay/">Professor David
+MacKay</a> …</li>
+<li>… in particular, with developing the <a
+href="http://www.decc.gov.uk/en/content/cms/what_we_do/lc_uk/2050/2050.aspx">DECC
+2050 Pathways</a></li>
 </ul></li>
 <li>Became a permanent civil servant in the department and:
 <ul>
 <li>Created the new engineering team</li>
-<li>then took over DECC's Futures team, part of the Strategy Directorate</li>
-<li>then took my whole team to the International Climate Change directorate, to help other countries replicate what we did</li>
-<li>whilst in the International Directorate, I also looked after the forests, private finance and international climate finance team when their manager moved on.</li>
-<li>then moved to the newly expanded Analysis Directorate, working for the Chief Economist</li>
+<li>then took over DECC’s Futures team, part of the Strategy
+Directorate</li>
+<li>then took my whole team to the International Climate Change
+directorate, to help other countries replicate what we did</li>
+<li>whilst in the International Directorate, I also looked after the
+forests, private finance and international climate finance team when
+their manager moved on.</li>
+<li>then moved to the newly expanded Analysis Directorate, working for
+the Chief Economist</li>
 </ul></li>
-<li>After eight years of commuting from Brighton to London (a four hour round trip), I'd had enough and moved to a tiny firm in <a href="https://en.wikipedia.org/wiki/Lewes">Lewes</a> <a href="http://eyfs.info">that helps children's nurseries</a></li>
+<li>After eight years of commuting from Brighton to London (a four hour
+round trip), I’d had enough and moved to a tiny firm in <a
+href="https://en.wikipedia.org/wiki/Lewes">Lewes</a> <a
+href="http://eyfs.info">that helps children’s nurseries</a>
+<ul>
+<li>Went from a few people in the founder’s house to a grown-up firm
+with a team of ten engineers and a million dollar spend.</li>
+<li>Spent lots of quality time with my children and fell in love with
+running across the South Downs</li>
+</ul></li>
+<li>My wife fell seriously ill, leading me to step-back and care for her
+and the children for a while</li>
+<li>Became interested in <a
+href="http://effectivealtruism.org">Effective Altruism</a> and started
+work for <a href="https://givedirectly.org">Give Directly</a> who set
+the standard for other charities to beat, by providing
+no-strings-attached cash to the poorest people in a way that is quick,
+efficient, large scale and well tested.</li>
 </ol>
 </body>
 </html>
