--- a/public/view/Phd.html
+++ b/public/view/Phd.html
@@ -1,95 +1,116 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8">
-  <title>PhD</title>
-  <style type="text/css">code{white-space: pre;}</style>
-  <!--[if lt IE 9]>
+	<meta charset="utf-8">
+	<title>PhD</title>
+	<style type="text/css">
+		code {
+			white-space: pre;
+		}
+	</style>
+	<!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
-  <link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-<h1>My PhD thesis&mdash;Remove toner: Reuse paper</h1>
+	<h1>My PhD thesis&mdash;Remove toner: Reuse paper</h1>
 
-<p>Back to the <a href='/'>home page</a></p>
+	<p>Back to the <a href='/'>home page</a></p>
 
-<p>I&#8217;ve finished my PhD. It was supervised by <a href='http://www.ifm.eng.cam.ac.uk/people/jma42' class=''>Julian Allwood</a>:</p>
+	<p>I&#8217;ve finished my PhD. It was supervised by <a href='http://www.ifm.eng.cam.ac.uk/people/jma42'
+			class=''>Julian Allwood</a>:</p>
 
 
 
 	<h2>Abstract</h2>
 
 
-	<p>This thesis reports on experiments into whether abrasives, lasers or solvents can remove ordinary black toner-print from ordinary white office paper in a way that leaves 
-the paper reusable. If it could be ‘un-printed’ then waste 
-office-paper could be reused immediately, without the need 
-for recycling.</p>
+	<p>This thesis reports on experiments into whether abrasives, lasers or solvents can remove ordinary black toner-print
+		from ordinary white office paper in a way that leaves
+		the paper reusable. If it could be ‘un-printed’ then waste
+		office-paper could be reused immediately, without the need
+		for recycling.</p>
 
 
-	<p>Paper and board consumption causes approximately 
-1% of man-made climate change gas emissions. Estimates 
-in the ﬁrst chapter suggest that un-printing could reduce 
-emissions per tonne of office paper by up to 95% – greater 
-than the potential from incineration, localisation, annual 
-ﬁbre, ﬁbre recycling, un-printing or electronic paper.</p>
+	<p>Paper and board consumption causes approximately
+		1% of man-made climate change gas emissions. Estimates
+		in the ﬁrst chapter suggest that un-printing could reduce
+		emissions per tonne of office paper by up to 95% – greater
+		than the potential from incineration, localisation, annual
+		ﬁbre, ﬁbre recycling, un-printing or electronic paper.</p>
 
 
-	<p>There has been no academic work on un-printing, but 
-some relevant patents have been ﬁled. The second chapter 
-reviews these patents according to whether they remove, 
-obscure or de-colour the original print. It is not clear from 
-the patents whether toner-print can be removed by abra- 
-sives, lasers, or solvents without rendering the paper unusable. These three approaches are tested experimentally 
-and the results reported in chapters 3, 4 &#38; 5.</p>
+	<p>There has been no academic work on un-printing, but
+		some relevant patents have been ﬁled. The second chapter
+		reviews these patents according to whether they remove,
+		obscure or de-colour the original print. It is not clear from
+		the patents whether toner-print can be removed by abra-
+		sives, lasers, or solvents without rendering the paper unusable. These three approaches are tested experimentally
+		and the results reported in chapters 3, 4 &#38; 5.</p>
 
 
-	<p>Abrasives can remove toner-print with limited damage to the underlying paper by operating in an adhesive 
-wear regime. This involves making ten passes with a ﬁne 
-P800 abrasive rubbing at high speeds (6 m/s) and low loads 
-(0.3 N). Longer wavelength lasers are able to remove the 
-toner-print and leave blank paper undamaged by operating 
-at 1 W and 10 kHz in the 1064 nm wavelength and scanning 
-across the surface eight times at 400 mm/s. Unfortunately 
-the paper beneath the print is yellowed during removal. 
-A 40:60 mixture chloroform and dimethylsulfoxide eﬀectively dissolves toner without dissolving paper if agitated 
-with ultrasound for four minutes.</p>
+	<p>Abrasives can remove toner-print with limited damage to the underlying paper by operating in an adhesive
+		wear regime. This involves making ten passes with a ﬁne
+		P800 abrasive rubbing at high speeds (6 m/s) and low loads
+		(0.3 N). Longer wavelength lasers are able to remove the
+		toner-print and leave blank paper undamaged by operating
+		at 1 W and 10 kHz in the 1064 nm wavelength and scanning
+		across the surface eight times at 400 mm/s. Unfortunately
+		the paper beneath the print is yellowed during removal.
+		A 40:60 mixture chloroform and dimethylsulfoxide eﬀectively dissolves toner without dissolving paper if agitated
+		with ultrasound for four minutes.</p>
 
 
-	<p>Chapter 6 outlines the research required to make the 
-approaches feasible replacements for conventional paper recycling. The abrasive approach requires research into ex- 
-tending abrasive life. The laser approach requires research 
-into avoiding paper yellowing. The solvent approach requires research into benign solvents and solvent recycling. 
-All three approaches would need to be tested on a wider 
-range of prints and papers.</p>
+	<p>Chapter 6 outlines the research required to make the
+		approaches feasible replacements for conventional paper recycling. The abrasive approach requires research into ex-
+		tending abrasive life. The laser approach requires research
+		into avoiding paper yellowing. The solvent approach requires research into benign solvents and solvent recycling.
+		All three approaches would need to be tested on a wider
+		range of prints and papers.</p>
 
 
-You can <a href='tamc-thesis-v2.pdf' class=''>
-download a pdf
-</a> of this thesis.
+	You can <a href='https://files.counsell.org/tamc-thesis-v2.pdf' class=''>
+		download a pdf
+	</a> of this thesis.
 
-The work was continued by <a href='http://www.lcmp.eng.cam.ac.uk/welcome/people/david-leal'>David R Leal-Ayala</a>. In particular, ge got the laser based approach to <a href='http://www.newscientist.com/blogs/onepercent/2012/03/laser-powered-unprinter-wipes.html'>work better</a>.
+	The work was continued by <a href='http://www.lcmp.eng.cam.ac.uk/welcome/people/david-leal'>David R Leal-Ayala</a>. In
+	particular, ge got the laser based approach to <a
+		href='http://www.newscientist.com/blogs/onepercent/2012/03/laser-powered-unprinter-wipes.html'>work better</a>.
 
 	<h2>PhD Publications</h2>
 
 
-	<p>Some of the material in my PhD thesis has been published in Journals and presented at conferences. In all cases my supervisor, <a href='http://www.ifm.eng.cam.ac.uk/people/jma42' class=''>Julian Allwood</a>, was co-author:</p>
+	<p>Some of the material in my PhD thesis has been published in Journals and presented at conferences. In all cases my
+		supervisor, <a href='http://www.ifm.eng.cam.ac.uk/people/jma42' class=''>Julian Allwood</a>, was co-author:</p>
 
 
 	<h3>Journal papers</h3>
 
 
 	<ol>
-	<li>Reducing climate change gas emissions by cutting out stages in 
-the life-cycle of office paper. Journal of Resources, Conservation and Recycling, 49(4):340–352, 2007. 
-<a href='http://dx.doi.org/10.1016/j.resconrec.2006.03.018' class=''>http://dx.doi.org/10.1016/j.resconrec.2006.03.018</a> </li>
-		<li>Desktop paper recycling: A survey of novel technologies that might recycle office paper within the office. Journal of Materials Processing Technology, 173(1):111–123, 2006. 
-<a href='http://dx.doi.org/10.1016/j.jmatprotec.2005.11.017' class=''>http://dx.doi.org/10.1016/j.jmatprotec.2005.11.017</a> </li>
-		<li>Meeting the 2050 carbon target for paper by print removal. CIRP Annals &#8211; Manufacturing Technology, 57(1):25-28, 2008.
-<a href='http://dx.doi.org/10.1016/j.cirp.2008.03.003' class=''>http://dx.doi.org/10.1016/j.cirp.2008.03.003</a></li>
+		<li>Reducing climate change gas emissions by cutting out stages in
+			the life-cycle of office paper. Journal of Resources, Conservation and Recycling, 49(4):340–352, 2007.
+			<a href='http://dx.doi.org/10.1016/j.resconrec.2006.03.018'
+				class=''>http://dx.doi.org/10.1016/j.resconrec.2006.03.018</a>
+		</li>
+		<li>Desktop paper recycling: A survey of novel technologies that might recycle office paper within the office.
+			Journal of Materials Processing Technology, 173(1):111–123, 2006.
+			<a href='http://dx.doi.org/10.1016/j.jmatprotec.2005.11.017'
+				class=''>http://dx.doi.org/10.1016/j.jmatprotec.2005.11.017</a>
+		</li>
+		<li>Meeting the 2050 carbon target for paper by print removal. CIRP Annals &#8211; Manufacturing Technology,
+			57(1):25-28, 2008.
+			<a href='http://dx.doi.org/10.1016/j.cirp.2008.03.003' class=''>http://dx.doi.org/10.1016/j.cirp.2008.03.003</a>
+		</li>
 		<li>Using abrasives to remove toner-print so that office paper might be reused. Wear. 266(7-8):782-794, 2009.
-<a href='http://dx.doi.org/10.1016/j.wear.2008.10.003' class=''>http://dx.doi.org/10.1016/j.wear.2008.10.003</a></li>
-		<li>Using solvents to remove a toner print so that office paper might be reused.    Proceedings    of    the    Royal    Society    A:    Mathematical, Physical    and    Engineering    Science    465(2112),    3839    (2009). <a href='http://dx.doi.org/10.1098/rspa.2009.0144' class=''>http://dx.doi.org/10.1098/rspa.2009.0144</a></li>
+			<a href='http://dx.doi.org/10.1016/j.wear.2008.10.003' class=''>http://dx.doi.org/10.1016/j.wear.2008.10.003</a>
+		</li>
+		<li>Using solvents to remove a toner print so that office paper might be reused. Proceedings of the Royal Society A:
+			Mathematical, Physical and Engineering Science 465(2112), 3839 (2009). <a
+				href='http://dx.doi.org/10.1098/rspa.2009.0144' class=''>http://dx.doi.org/10.1098/rspa.2009.0144</a></li>
 	</ol>
 
 
@@ -97,22 +118,26 @@ the life-cycle of office paper. Journal of Resources, Conservation and Recycling
 
 
 	<ol>
-	<li>Rethinking office paper recycling. In 4th International conference 
-on design and manufacture for sustainable development, Newcastle, 12-13 July 2005. </li>
-		<li>The feasibility and environmental consequences of scale change in office paper production. In ISIE 2005, Stockholm, 12-15 June. </li>
-		<li>Un-printing toner: Early results. In 13th CIRP Intl. Conference on Life Cycle Engineering, Leuven, 31 May–2 Jun 2006. 
-<a href='http://www.mech.kuleuven.be/lce2006/122.pdf' class=''>http://www.mech.kuleuven.be/lce2006/122.pdf</a>.</li>
+		<li>Rethinking office paper recycling. In 4th International conference
+			on design and manufacture for sustainable development, Newcastle, 12-13 July 2005. </li>
+		<li>The feasibility and environmental consequences of scale change in office paper production. In ISIE 2005,
+			Stockholm, 12-15 June. </li>
+		<li>Un-printing toner: Early results. In 13th CIRP Intl. Conference on Life Cycle Engineering, Leuven, 31 May–2 Jun
+			2006.
+			<a href='http://www.mech.kuleuven.be/lce2006/122.pdf' class=''>http://www.mech.kuleuven.be/lce2006/122.pdf</a>.
+		</li>
 	</ol>
 
-  <h3>Other reports</h3>
+	<h3>Other reports</h3>
 
-  <ol>
-    <li>A report on <a href='http://phys.org/news175847766.html'>Phys.org</a>.</li>
-    <li>A mention in the November 2009 UK edition of Wired Magazine</li>
-    <li>Mentions in Julian Allwood's book <a href='http://www.withbotheyesopen.com'>Sustainable Materials: with both eyes open</a>.</li>
+	<ol>
+		<li>A report on <a href='http://phys.org/news175847766.html'>Phys.org</a>.</li>
+		<li>A mention in the November 2009 UK edition of Wired Magazine</li>
+		<li>Mentions in Julian Allwood's book <a href='http://www.withbotheyesopen.com'>Sustainable Materials: with both
+				eyes open</a>.</li>
 
-  </ol>
-    
+	</ol>
+
 
 </body>
 
